- simplify uri node implementation - add spring boot actuator - fix github workflows to java 21 - add loader properties to enable external module loading